# auction

./: Bid.hs  Main.hs  Node.hs  auction.cabal  stack.yaml
