name: auction
version: 0.1.0.0
license: BSD3
license-file: LICENSE
author: iokasimov
maintainer: iokasimov@gmail.com
category: Web
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  build-depends: base, bytestring, lens, transformers, crdt, network, network-simple, async, cereal, errors
  exposed-modules: Node, Bid
  default-extensions: OverloadedStrings, TypeSynonymInstances
  default-language: Haskell2010

executable auction
  main-is: Main.hs
  build-depends: base, bytestring, lens, transformers, crdt, network, network-simple, async, cereal, errors
  default-extensions: OverloadedStrings, TypeSynonymInstances
  default-language: Haskell2010
